Wrap tables to fix border collapse issue.

--- a/front-end/src/common.less
+++ b/front-end/src/common.less
@@ -92,8 +92,8 @@ h1, h2, h3 {
     margin: 16px 0;
 }
 
-p, table {
-    margin: 0 0 8px 0;
+p, .TableWrapper {
+	margin: 0 0 8px 0;
 }
 
 p {
@@ -118,34 +118,20 @@ a:active, a:hover, a:focus {
 }
 
 table {
-	border-collapse: separate;
+	border-collapse: collapse;
 	border-spacing: 0;
-    width: 100%;
+	border-style: hidden;
+	width: 100%;
 }
 
-table tr > th, table tr > td {
-	border-right: @border-style;
-	border-bottom: @border-style;
-}
-
-table tr > th:first-child, table tr > td:first-child {
-	border-left: @border-style;
-}
-
-table > thead th:first-child {
-	 border-top-left-radius: 4px;
-}
-
-table > thead th:last-child {
-	 border-top-right-radius: 4px;
-}
-
-table > tbody > tr:last-child > td:first-child {
-	 border-bottom-left-radius: 4px;
-}
-
-table > tbody > tr:last-child > td:last-child {
-	 border-bottom-right-radius: 4px;
+/* Wrapper to provide rounded table borders in the presence of
+ * "border-collapse: collapse".
+ */
+.TableWrapper {
+	border: @border-style;
+	border-radius: 4px;
+	display: table;
+	width: 100%;
 }
 
 table > tbody > tr > td.FirstInList, table > tbody > tr > td.MiddleInList {
@@ -169,8 +155,11 @@ td {
 }
 
 th {
-	border-top: @border-style;
 	padding: 16px;
+}
+
+td, th {
+	border: @border-style;
 }
 
 td.grow, th.grow {
